# swgl-replay

./: .gitignore  Cargo.toml  README.md  generate.el  mozilla-central.patch
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rle.rs  rle_u32.rs  rle_u8.rs
gl-replay/: README.md  generate.el
gl-replay/fuzz/: Cargo.toml
gl-replay/src/: call.rs  file_stream.rs  form.rs  lib.rs  raw.rs  replay.rs  rle.rs
src/: call.rs  dyn_swgl.rs  file_stream.rs  files.rs  form.rs  forms.rs  impl_swgl.rs  lib.rs  parameter.rs  pixels.rs  raw.rs  recorder.rs  recorder_gl.rs  recorder_impl.rs  replay.rs  rle.rs  serialize.rs  var.rs  write_image.rs
src/recorder/: impl_gl.rs
swgl-replay/: Cargo.toml
swgl-replay/src/: call.rs  fingerprinter.rs  replay.rs
