[package]
name = "gl-replay"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gleam = { path = "/home/jimb/rust/gleam" }
docopt = "1.1"
serde = { version = "1", features = ["derive"] }
