[package]
name = "swgl-replay"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-replay = { path = "../gl-replay" }
gleam = { path = "/home/jimb/rust/gleam" }
swgl = { path = "/home/jimb/moz/central/gfx/wr/swgl" }
